--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,26 @@
 .test
+/coverage
 node_modules
 
 .vscode
 .idea
 
 dist
+/build
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log* 
