--- a/package.json
+++ b/package.json
@@ -3,13 +3,6 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.5.0",
-        "@testing-library/user-event": "^7.2.1",
-        "@types/jest": "^24.9.1",
-        "@types/react": "^16.9.32",
-        "@types/react-dom": "^16.9.6",
-        "prettier": "^2.0.3",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-scripts": "3.4.1",
@@ -19,7 +12,14 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "prettier": "prettier \"{,!(node_modules)/**/}*.{json,html,md,scss,css,yaml,yml}\"",
+        "prettier:check": "npm run prettier -- --check",
+        "prettier:fix": "npm run prettier -- --write",
+        "eslint:check": "tsc --noEmit && eslint ./**/*.{js,jsx,ts,tsx}",
+        "eslint:fix": "npm run eslint:check -- --fix",
+        "check": "npm run prettier:check && npm run eslint:check",
+        "fix": "npm run eslint:fix && npm run prettier:fix"
     },
     "eslintConfig": {
         "extends": "react-app"
@@ -35,5 +35,18 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@testing-library/jest-dom": "^4.2.4",
+        "@testing-library/react": "^9.5.0",
+        "@testing-library/user-event": "^7.2.1",
+        "@types/jest": "^24.9.1",
+        "@types/react": "^16.9.32",
+        "@types/react-dom": "^16.9.6",
+        "eslint": "^6.8.0",
+        "eslint-config-airbnb-typescript": "^7.2.0",
+        "eslint-config-prettier": "^6.10.1",
+        "eslint-plugin-prettier": "^3.1.2",
+        "prettier": "^2.0.4"
     }
 }
