--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@progress/kendo-react-buttons": "^3.12.0",
+        "@progress/kendo-theme-default": "^4.17.0",
+        "@types/react-router-dom": "^5.1.3",
+        "@types/styled-components": "^5.0.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
-        "react-scripts": "3.4.1",
+        "react-router-dom": "^5.1.2",
+        "react-scripts": "^3.4.1",
+        "styled-components": "^5.1.0",
         "typescript": "^3.7.5"
     },
     "scripts": {
