--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@material-ui/core": "^4.9.14",
+        "@material-ui/icons": "^4.9.1",
+        "@material-ui/lab": "^4.0.0-alpha.53",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
-        "react-scripts": "3.4.1",
-        "typescript": "^3.7.5"
+        "react-router-dom": "^5.1.2",
+        "react-scripts": "^3.4.1",
+        "react-slick": "^0.25.2",
+        "slick-carousel": "^1.8.1",
+        "styled-components": "^5.1.0"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -43,10 +49,16 @@
         "@types/jest": "^24.9.1",
         "@types/react": "^16.9.32",
         "@types/react-dom": "^16.9.6",
+        "@types/react-router-dom": "^5.1.4",
+        "@types/react-slick": "^0.23.4",
+        "@types/styled-components": "^5.1.0",
         "eslint": "^6.8.0",
         "eslint-config-airbnb-typescript": "^7.2.0",
         "eslint-config-prettier": "^6.10.1",
+        "eslint-plugin-import": "^2.20.2",
         "eslint-plugin-prettier": "^3.1.2",
-        "prettier": "^2.0.4"
+        "node-sass": "^4.13.1",
+        "prettier": "^2.0.4",
+        "typescript": "^3.8.3"
     }
 }
