--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@progress/kendo-react-buttons": "^3.12.0",
+        "@progress/kendo-react-layout": "^3.12.0",
         "@progress/kendo-theme-default": "^4.17.0",
         "@types/react-router-dom": "^5.1.3",
         "@types/styled-components": "^5.0.1",
