--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
         "@material-ui/icons": "^4.9.1",
         "@material-ui/lab": "^4.0.0-alpha.53",
         "@reduxjs/toolkit": "^1.3.5",
+        "@types/lz-string": "^1.3.34",
         "@types/react-grid-layout": "^0.17.1",
         "ag-grid-community": "^23.1.0",
         "ag-grid-react": "^23.1.0",
         "lodash": "^4.17.15",
+        "lz-string": "^1.4.4",
         "mdi-material-ui": "^6.14.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
