--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "@material-ui/lab": "^4.0.0-alpha.53",
         "@reduxjs/toolkit": "^1.3.5",
         "@types/lz-string": "^1.3.34",
-        "@types/react-grid-layout": "^0.17.1",
+        "@types/react-grid-layout": "~0.17.1",
         "ag-grid-community": "^23.1.0",
         "ag-grid-react": "^23.1.0",
         "lodash": "^4.17.15",
