--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "@reduxjs/toolkit": "^1.3.5",
         "@sentry/browser": "^5.16.1",
         "@types/lz-string": "^1.3.34",
-        "@types/react-grid-layout": "~0.17.1",
+        "@types/react-grid-layout": "^0.17.1",
+        "@types/webpack-env": "^1.15.2",
         "ag-grid-community": "^23.1.0",
         "ag-grid-react": "^23.1.0",
         "lodash": "^4.17.15",
@@ -39,7 +40,7 @@
         "prettier": "prettier \"./**/*.{js,jsx,ts,tsx,json,html,md,scss,css,yaml,yml}\"",
         "prettier:check": "npm run prettier -- --check",
         "prettier:fix": "npm run prettier -- --write",
-        "eslint:check": "tsc --noEmit && eslint './**/*.{js,jsx,ts,tsx}'",
+        "eslint:check": "tsc --noEmit && eslint \"./**/*.{js,jsx,ts,tsx}\"",
         "eslint:fix": "npm run eslint:check -- --fix",
         "check": "npm run prettier:check && npm run eslint:check",
         "fix": "npm run eslint:fix && npm run prettier:fix"
@@ -78,7 +79,7 @@
         "eslint-config-prettier": "^6.10.1",
         "eslint-plugin-import": "^2.20.2",
         "eslint-plugin-prettier": "^3.1.2",
-        "node-sass": "^4.13.1",
+        "node-sass": "^4.14.1",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.0.4",
         "typescript": "^3.8.3"
