--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@material-ui/icons": "^4.9.1",
         "@material-ui/lab": "^4.0.0-alpha.53",
         "@reduxjs/toolkit": "^1.3.5",
+        "@sentry/browser": "^5.16.1",
         "@types/lz-string": "^1.3.34",
         "@types/react-grid-layout": "~0.17.1",
         "ag-grid-community": "^23.1.0",
@@ -15,6 +16,7 @@
         "lodash": "^4.17.15",
         "lz-string": "^1.4.4",
         "mdi-material-ui": "^6.14.0",
+        "notistack": "~0.9.16",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-grid-layout": "~0.18.3",
@@ -58,6 +60,7 @@
         ]
     },
     "devDependencies": {
+        "@sentry/webpack-plugin": "^1.11.1",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
