Add unit and integration tests

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@genialis/resolwe": "^14.2.0",
+        "@genialis/resolwe": "^14.3.2",
         "@material-ui/core": "^4.9.14",
         "@material-ui/icons": "^4.9.1",
         "@material-ui/lab": "^4.0.0-alpha.53",
@@ -38,7 +38,7 @@
         "start:react": "react-scripts start",
         "start:proxy": "node src/proxy.js \"QA2 proxy\" https://qa2.genialis.com",
         "build": "react-scripts build",
-        "test": "react-scripts test",
+        "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
         "eject": "react-scripts eject",
         "prettier": "prettier \"./**/*.{js,jsx,ts,tsx,json,html,md,scss,css,yaml,yml}\"",
         "prettier:check": "npm run prettier -- --check",
@@ -66,15 +66,17 @@
     "devDependencies": {
         "@sentry/webpack-plugin": "^1.11.1",
         "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.5.0",
+        "@testing-library/react": "^10.4.7",
         "@testing-library/user-event": "^7.2.1",
         "@types/jest": "^24.9.1",
+        "@types/jsdom": "^16.2.3",
         "@types/lodash": "^4.14.150",
         "@types/react": "^16.9.32",
         "@types/react-dom": "^16.9.6",
         "@types/react-redux": "^7.1.7",
         "@types/react-router-dom": "^5.1.4",
-        "@types/react-slick": "~0.23.4",
+        "@types/react-slick": "^0.23.4",
+        "@types/redux-mock-store": "^1.0.2",
         "@types/styled-components": "^5.1.0",
         "browser-sync": "^2.26.7",
         "eslint": "^6.8.0",
@@ -82,9 +84,14 @@
         "eslint-config-prettier": "^6.10.1",
         "eslint-plugin-import": "^2.20.2",
         "eslint-plugin-prettier": "^3.1.2",
+        "jest-canvas-mock": "^2.2.0",
+        "jest-environment-jsdom-sixteen": "^1.0.3",
+        "jest-fetch-mock": "^3.0.3",
+        "jsdom": "^16.4.0",
         "node-sass": "^4.14.1",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.0.4",
+        "redux-mock-store": "^1.5.4",
         "typescript": "^3.8.3"
     }
 }
