--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@genialis/resolwe": "^14.2.0",
         "@material-ui/core": "^4.9.14",
         "@material-ui/icons": "^4.9.1",
         "@material-ui/lab": "^4.0.0-alpha.53",
+        "@reduxjs/toolkit": "^1.3.5",
+        "lodash": "^4.17.15",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-router-dom": "^5.1.2",
         "react-scripts": "^3.4.1",
-        "react-slick": "^0.25.2",
+        "react-slick": "~0.25.2",
+        "redux": "^4.0.5",
         "slick-carousel": "^1.8.1",
         "styled-components": "^5.1.0"
     },
@@ -19,7 +23,7 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "prettier": "prettier \"{,!(node_modules)/**/}*.{json,html,md,scss,css,yaml,yml}\"",
+        "prettier": "prettier \"./**/*.{js,jsx,ts,tsx,json,html,md,scss,css,yaml,yml}\"",
         "prettier:check": "npm run prettier -- --check",
         "prettier:fix": "npm run prettier -- --write",
         "eslint:check": "tsc --noEmit && eslint './**/*.{js,jsx,ts,tsx}'",
@@ -47,10 +51,12 @@
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
         "@types/jest": "^24.9.1",
+        "@types/lodash": "^4.14.150",
         "@types/react": "^16.9.32",
         "@types/react-dom": "^16.9.6",
+        "@types/react-redux": "^7.1.7",
         "@types/react-router-dom": "^5.1.4",
-        "@types/react-slick": "^0.23.4",
+        "@types/react-slick": "~0.23.4",
         "@types/styled-components": "^5.1.0",
         "eslint": "^6.8.0",
         "eslint-config-airbnb-typescript": "^7.2.0",
