--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
         "react-scripts": "^3.4.1",
         "react-slick": "~0.25.2",
         "redux": "^4.0.5",
+        "redux-thunk": "^2.3.0",
         "slick-carousel": "^1.8.1",
         "styled-components": "^5.1.0"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "run-p start:proxy start:react",
+        "start:react": "react-scripts start",
+        "start:proxy": "node src/proxy.js \"QA2 proxy\" https://qa2.genialis.com",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
@@ -54,16 +57,17 @@
         "@types/lodash": "^4.14.150",
         "@types/react": "^16.9.32",
         "@types/react-dom": "^16.9.6",
-        "@types/react-redux": "^7.1.7",
         "@types/react-router-dom": "^5.1.4",
         "@types/react-slick": "~0.23.4",
         "@types/styled-components": "^5.1.0",
+        "browser-sync": "^2.26.7",
         "eslint": "^6.8.0",
         "eslint-config-airbnb-typescript": "^7.2.0",
         "eslint-config-prettier": "^6.10.1",
         "eslint-plugin-import": "^2.20.2",
         "eslint-plugin-prettier": "^3.1.2",
         "node-sass": "^4.13.1",
+        "npm-run-all": "^4.1.5",
         "prettier": "^2.0.4",
         "typescript": "^3.8.3"
     }
