--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
         "@material-ui/icons": "^4.9.1",
         "@material-ui/lab": "^4.0.0-alpha.53",
         "@reduxjs/toolkit": "^1.3.5",
+        "@types/react-grid-layout": "^0.17.1",
+        "ag-grid-community": "^23.1.0",
+        "ag-grid-react": "^23.1.0",
         "lodash": "^4.17.15",
+        "mdi-material-ui": "^6.14.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-grid-layout": "~0.18.3",
+        "react-redux": "^7.2.0",
         "react-router-dom": "^5.1.2",
         "react-scripts": "^3.4.1",
         "react-slick": "~0.25.2",
@@ -57,6 +63,7 @@
         "@types/lodash": "^4.14.150",
         "@types/react": "^16.9.32",
         "@types/react-dom": "^16.9.6",
+        "@types/react-redux": "^7.1.7",
         "@types/react-router-dom": "^5.1.4",
         "@types/react-slick": "~0.23.4",
         "@types/styled-components": "^5.1.0",
