--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "react-sizeme": "^2.6.12",
         "react-slick": "^0.25.2",
         "redux": "^4.0.5",
-        "redux-thunk": "^2.3.0",
+        "redux-observable": "^1.2.0",
+        "rxjs": "^6.6.2",
         "slick-carousel": "^1.8.1",
         "styled-components": "^5.1.0",
         "vega": "^5.12.3",
