--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@sentry/browser": "^5.16.1",
         "@types/lz-string": "^1.3.34",
         "@types/react-grid-layout": "^0.17.1",
+        "@types/uuid": "^8.3.0",
         "@types/webpack-env": "^1.15.2",
         "ag-grid-community": "^23.1.0",
         "ag-grid-react": "^23.1.0",
@@ -31,6 +32,7 @@
         "rxjs": "^6.6.2",
         "slick-carousel": "^1.8.1",
         "styled-components": "^5.1.0",
+        "uuid": "^8.3.0",
         "vega": "^5.12.3",
         "vega-tooltip": "^0.23.0"
     },
