--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
         "@types/react-grid-layout": "^0.17.1",
         "@types/uuid": "^8.3.0",
         "@types/webpack-env": "^1.15.2",
-        "ag-grid-community": "^23.1.0",
-        "ag-grid-react": "^23.1.0",
+        "ag-grid-community": "^24.1.0",
+        "ag-grid-enterprise": "^24.1.0",
+        "ag-grid-react": "^24.1.0",
         "lodash": "^4.17.15",
         "lz-string": "^1.4.4",
         "mdi-material-ui": "^6.14.0",
