--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@devexpress/dx-react-core": "^2.7.2",
+        "@devexpress/dx-react-grid": "^2.7.2",
+        "@devexpress/dx-react-grid-material-ui": "^2.7.2",
         "@genialis/resolwe": "^14.3.2",
         "@material-ui/core": "^4.9.14",
         "@material-ui/icons": "^4.9.1",
