--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
         "@types/react-grid-layout": "^0.17.1",
         "@types/uuid": "^8.3.0",
         "@types/webpack-env": "^1.15.2",
-        "ag-grid-community": "^23.1.0",
-        "ag-grid-react": "^23.1.0",
+        "ag-grid-community": "^24.1.0",
+        "ag-grid-react": "^24.1.0",
         "lodash": "^4.17.15",
         "lz-string": "^1.4.4",
         "mdi-material-ui": "^6.14.0",
@@ -41,7 +41,7 @@
         "start:react": "react-scripts start",
         "start:proxy": "node src/proxy.js \"QA2 proxy\" https://qa2.genialis.com",
         "build": "react-scripts build",
-        "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
+        "test": "react-scripts test --env=jest-environment-jsdom-sixteen ",
         "eject": "react-scripts eject",
         "prettier": "prettier \"./**/*.{js,jsx,ts,tsx,json,html,md,scss,css,yaml,yml}\"",
         "prettier:check": "npm run prettier -- --check",
@@ -91,6 +91,7 @@
         "jest-environment-jsdom-sixteen": "^1.0.3",
         "jest-fetch-mock": "^3.0.3",
         "jsdom": "^16.4.0",
+        "mock-socket": "^9.0.3",
         "node-sass": "^4.14.1",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.0.4",
