--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@types/webpack-env": "^1.15.2",
         "ag-grid-community": "^24.1.0",
         "ag-grid-react": "^24.1.0",
+        "jszip": "^3.5.0",
         "lodash": "^4.17.15",
         "lz-string": "^1.4.4",
         "mdi-material-ui": "^6.14.0",
