Add Playwright E2E config and first test

--- a/package.json
+++ b/package.json
@@ -41,19 +41,17 @@
         "resetMocks": false
     },
     "scripts": {
-        "start": "run-p start:proxy start:react",
-        "start:react": "react-scripts start",
-        "start:proxy": "node src/proxy.js \"QA2 proxy\" https://qa2.genialis.com",
+        "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test --env=jest-environment-jsdom-sixteen ",
+        "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
+        "prettier": "prettier",
+        "e2e:run": "cd e2e && jest",
+        "e2e:debug": "cd e2e && DEBUG=pw:api PWDEBUG=1 jest",
+        "test:e2e": "cross-env CI=true BROWSER=none start-server-and-test start 3000 e2e:run",
         "eject": "react-scripts eject",
-        "prettier": "prettier \"./**/*.{js,jsx,ts,tsx,json,html,md,scss,css,yaml,yml}\"",
-        "prettier:check": "npm run prettier -- --check",
-        "prettier:fix": "npm run prettier -- --write",
-        "eslint:check": "tsc --noEmit && eslint \"./**/*.{js,jsx,ts,tsx}\"",
-        "eslint:fix": "npm run eslint:check -- --fix",
-        "check": "npm run prettier:check && npm run eslint:check",
-        "fix": "npm run eslint:fix && npm run prettier:fix"
+        "lint": "eslint --ext .js,.jsx,.ts,.tsx,.env,.rc .",
+        "lint:fix": "npm run lint -- --fix",
+        "check": "tsc && npm run lint"
     },
     "eslintConfig": {
         "extends": "react-app"
@@ -71,6 +69,19 @@
         ]
     },
     "devDependencies": {
+        "@jest/globals": "^26.6.2",
+        "@jest/types": "^26.6.2",
+        "@sentry/webpack-plugin": "^1.11.1",
+        "@testing-library/jest-dom": "^4.2.4",
+        "@testing-library/react": "^10.4.7",
+        "@testing-library/user-event": "^7.2.1",
+        "@types/jest": "^24.9.1",
+        "@types/jsdom": "^16.2.3",
+        "@types/lodash": "^4.14.150",
+        "@types/react": "^16.9.32",
+        "@types/react-dom": "^16.9.6",
+        "@types/react-redux": "^7.1.7",
+        "@types/react-router-dom": "^5.1.4",
         "@sentry/webpack-plugin": "^1.14.0",
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.5",
@@ -84,6 +95,16 @@
         "@types/react-router-dom": "^5.1.7",
         "@types/react-slick": "^0.23.4",
         "@types/redux-mock-store": "^1.0.2",
+        "@types/styled-components": "^5.1.0",
+        "browser-sync": "^2.26.7",
+        "cross-env": "^7.0.3",
+        "eslint": "^6.8.0",
+        "eslint-config-airbnb-typescript": "^7.2.0",
+        "eslint-config-prettier": "^7.2.0",
+        "eslint-plugin-import": "^2.20.2",
+        "eslint-plugin-prettier": "^3.3.1",
+        "http-proxy-middleware": "^1.0.6",
+        "jest-canvas-mock": "^2.2.0",
         "@types/styled-components": "^5.1.7",
         "browser-sync": "^2.26.14",
         "eslint": "^7.19.0",
@@ -94,10 +115,15 @@
         "jest-canvas-mock": "^2.3.1",
         "jest-environment-jsdom-sixteen": "^1.0.3",
         "jest-fetch-mock": "^3.0.3",
+        "jest-image-snapshot": "^4.3.0",
+        "jest-playwright-preset": "^1.4.5",
         "jsdom": "^16.4.0",
         "mock-socket": "^9.0.3",
         "node-sass": "^4.14.1",
         "npm-run-all": "^4.1.5",
+        "playwright": "^1.8.0",
+        "playwright-core": "^1.8.0",
+        "prettier": "^2.0.4",
         "prettier": "^2.2.1",
         "redux-mock-store": "^1.5.4",
         "typescript": "^4.1.3"
