--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=https://localhost:8001/api
-REACT_APP_REST_AUTH_URL=https://localhost:8001/rest-auth
+REACT_APP_API_URL=http://localhost:3000/api
+REACT_APP_REST_AUTH_URL=http://localhost:3000/rest-auth
 REACT_APP_SENTRY_URL=https://e0a554a693f641a6923a4240a2a64dfb@o74924.ingest.sentry.io/5265645
 REACT_APP_WEBSOCKET_URL=wss://qa2.genialis.com/ws/
