--- a/package.json
+++ b/package.json
@@ -3,39 +3,42 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@genialis/resolwe": "^14.3.2",
-        "@material-ui/core": "^4.9.14",
-        "@material-ui/icons": "^4.9.1",
-        "@material-ui/lab": "^4.0.0-alpha.53",
-        "@reduxjs/toolkit": "^1.3.5",
-        "@sentry/browser": "^5.16.1",
+        "@genialis/resolwe": "^15.0.0",
+        "@material-ui/core": "^4.11.0",
+        "@material-ui/icons": "^4.11.2",
+        "@material-ui/lab": "^4.0.0-alpha.57",
+        "@reduxjs/toolkit": "^1.5.0",
+        "@sentry/browser": "^6.0.4",
         "@types/lz-string": "^1.3.34",
-        "@types/react-grid-layout": "^0.17.1",
+        "@types/react-grid-layout": "^1.1.1",
         "@types/uuid": "^8.3.0",
-        "@types/webpack-env": "^1.15.2",
+        "@types/webpack-env": "^1.16.0",
         "ag-grid-community": "^24.1.0",
-        "ag-grid-react": "^24.1.0",
+        "ag-grid-react": "^24.1.1",
         "jszip": "^3.5.0",
-        "lodash": "^4.17.15",
+        "lodash": "^4.17.20",
         "lz-string": "^1.4.4",
-        "mdi-material-ui": "^6.14.0",
-        "notistack": "~0.9.16",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "react-grid-layout": "~0.18.3",
-        "react-redux": "^7.2.0",
-        "react-router-dom": "^5.1.2",
-        "react-scripts": "^3.4.1",
+        "mdi-material-ui": "^6.22.0",
+        "notistack": "^1.0.3",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "react-grid-layout": "^1.2.0",
+        "react-redux": "^7.2.2",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "^4.0.2",
         "react-sizeme": "^2.6.12",
-        "react-slick": "^0.25.2",
+        "react-slick": "^0.28.0",
         "redux": "^4.0.5",
         "redux-observable": "^1.2.0",
         "rxjs": "^6.6.2",
         "slick-carousel": "^1.8.1",
-        "styled-components": "^5.1.0",
-        "uuid": "^8.3.0",
-        "vega": "^5.17.0",
-        "vega-tooltip": "^0.23.0"
+        "styled-components": "^5.2.1",
+        "uuid": "^8.3.2",
+        "vega": "^5.19.1",
+        "vega-tooltip": "^0.25.0"
+    },
+    "jest": {
+        "resetMocks": false
     },
     "scripts": {
         "start": "run-p start:proxy start:react",
@@ -68,35 +71,35 @@
         ]
     },
     "devDependencies": {
-        "@sentry/webpack-plugin": "^1.11.1",
-        "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^10.4.7",
-        "@testing-library/user-event": "^7.2.1",
-        "@types/jest": "^24.9.1",
-        "@types/jsdom": "^16.2.3",
-        "@types/lodash": "^4.14.150",
-        "@types/react": "^16.9.32",
-        "@types/react-dom": "^16.9.6",
-        "@types/react-redux": "^7.1.7",
-        "@types/react-router-dom": "^5.1.4",
+        "@sentry/webpack-plugin": "^1.14.0",
+        "@testing-library/jest-dom": "^5.11.9",
+        "@testing-library/react": "^11.2.5",
+        "@testing-library/user-event": "^12.6.3",
+        "@types/jest": "^26.0.20",
+        "@types/jsdom": "^16.2.6",
+        "@types/lodash": "^4.14.168",
+        "@types/react": "^17.0.1",
+        "@types/react-dom": "^17.0.0",
+        "@types/react-redux": "^7.1.16",
+        "@types/react-router-dom": "^5.1.7",
         "@types/react-slick": "^0.23.4",
         "@types/redux-mock-store": "^1.0.2",
-        "@types/styled-components": "^5.1.0",
-        "browser-sync": "^2.26.7",
-        "eslint": "^6.8.0",
-        "eslint-config-airbnb-typescript": "^7.2.0",
-        "eslint-config-prettier": "^6.10.1",
-        "eslint-plugin-import": "^2.20.2",
-        "eslint-plugin-prettier": "^3.1.2",
-        "jest-canvas-mock": "^2.2.0",
+        "@types/styled-components": "^5.1.7",
+        "browser-sync": "^2.26.14",
+        "eslint": "^7.19.0",
+        "eslint-config-airbnb-typescript": "^12.3.1",
+        "eslint-config-prettier": "^7.2.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-prettier": "^3.3.1",
+        "jest-canvas-mock": "^2.3.1",
         "jest-environment-jsdom-sixteen": "^1.0.3",
         "jest-fetch-mock": "^3.0.3",
         "jsdom": "^16.4.0",
         "mock-socket": "^9.0.3",
         "node-sass": "^4.14.1",
         "npm-run-all": "^4.1.5",
-        "prettier": "^2.0.4",
+        "prettier": "^2.2.1",
         "redux-mock-store": "^1.5.4",
-        "typescript": "^3.8.3"
+        "typescript": "^4.1.3"
     }
 }
