--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
         "lodash": "^4.17.20",
         "lz-string": "^1.4.4",
         "mdi-material-ui": "^6.22.0",
+        "mobx": "^6.1.5",
+        "mobx-react-lite": "^3.2.0",
+        "mobx-utils": "^6.0.3",
         "notistack": "^1.0.3",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
