--- a/package.json
+++ b/package.json
@@ -31,7 +31,13 @@
         "redux": "^4.0.5",
         "redux-observable": "^1.2.0",
         "rxjs": "^6.6.2",
+        "serve": "^11.3.2",
         "slick-carousel": "^1.8.1",
+        "styled-components": "^5.1.0",
+        "uuid": "^8.3.0",
+        "vega": "^5.17.0",
+        "vega-tooltip": "^0.23.0",
+        "webpack-cli": "^4.5.0"
         "styled-components": "^5.2.1",
         "uuid": "^8.3.2",
         "vega": "^5.19.1",
@@ -42,12 +48,12 @@
     },
     "scripts": {
         "start": "react-scripts start",
+        "serve": "node ./src/serveLocalBuild.js",
         "build": "react-scripts build",
         "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
         "prettier": "prettier",
         "e2e:run": "cd e2e && jest",
         "e2e:debug": "cd e2e && DEBUG=pw:api PWDEBUG=1 jest",
-        "test:e2e": "cross-env CI=true BROWSER=none start-server-and-test start 3000 e2e:run",
         "eject": "react-scripts eject",
         "lint": "eslint --ext .js,.jsx,.ts,.tsx,.env,.rc .",
         "lint:fix": "npm run lint -- --fix",
@@ -103,6 +109,7 @@
         "eslint-config-prettier": "^7.2.0",
         "eslint-plugin-import": "^2.20.2",
         "eslint-plugin-prettier": "^3.3.1",
+        "express": "^4.17.1",
         "http-proxy-middleware": "^1.0.6",
         "jest-canvas-mock": "^2.2.0",
         "@types/styled-components": "^5.1.7",
@@ -121,8 +128,9 @@
         "mock-socket": "^9.0.3",
         "node-sass": "^4.14.1",
         "npm-run-all": "^4.1.5",
-        "playwright": "^1.8.0",
-        "playwright-core": "^1.8.0",
+        "playwright": "^1.8.1",
+        "playwright-core": "^1.8.1",
+        "playwright-testing-library": "^2.7.0",
         "prettier": "^2.0.4",
         "prettier": "^2.2.1",
         "redux-mock-store": "^1.5.4",
