--- a/package.json
+++ b/package.json
@@ -33,15 +33,11 @@
         "rxjs": "^6.6.2",
         "serve": "^11.3.2",
         "slick-carousel": "^1.8.1",
-        "styled-components": "^5.1.0",
-        "uuid": "^8.3.0",
-        "vega": "^5.17.0",
-        "vega-tooltip": "^0.23.0",
-        "webpack-cli": "^4.5.0"
         "styled-components": "^5.2.1",
         "uuid": "^8.3.2",
         "vega": "^5.19.1",
-        "vega-tooltip": "^0.25.0"
+        "vega-tooltip": "^0.25.0",
+        "webpack-cli": "^4.5.0"
     },
     "jest": {
         "resetMocks": false
@@ -53,7 +49,7 @@
         "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
         "prettier": "prettier",
         "e2e:run": "cd e2e && jest",
-        "e2e:debug": "cd e2e && DEBUG=pw:api PWDEBUG=1 jest",
+        "e2e:debug": "cd e2e && cross-env DEBUG=pw:api PWDEBUG=1 jest",
         "eject": "react-scripts eject",
         "lint": "eslint --ext .js,.jsx,.ts,.tsx,.env,.rc .",
         "lint:fix": "npm run lint -- --fix",
@@ -77,17 +73,6 @@
     "devDependencies": {
         "@jest/globals": "^26.6.2",
         "@jest/types": "^26.6.2",
-        "@sentry/webpack-plugin": "^1.11.1",
-        "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^10.4.7",
-        "@testing-library/user-event": "^7.2.1",
-        "@types/jest": "^24.9.1",
-        "@types/jsdom": "^16.2.3",
-        "@types/lodash": "^4.14.150",
-        "@types/react": "^16.9.32",
-        "@types/react-dom": "^16.9.6",
-        "@types/react-redux": "^7.1.7",
-        "@types/react-router-dom": "^5.1.4",
         "@sentry/webpack-plugin": "^1.14.0",
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.5",
@@ -101,17 +86,9 @@
         "@types/react-router-dom": "^5.1.7",
         "@types/react-slick": "^0.23.4",
         "@types/redux-mock-store": "^1.0.2",
-        "@types/styled-components": "^5.1.0",
-        "browser-sync": "^2.26.7",
         "cross-env": "^7.0.3",
-        "eslint": "^6.8.0",
-        "eslint-config-airbnb-typescript": "^7.2.0",
-        "eslint-config-prettier": "^7.2.0",
-        "eslint-plugin-import": "^2.20.2",
-        "eslint-plugin-prettier": "^3.3.1",
         "express": "^4.17.1",
         "http-proxy-middleware": "^1.0.6",
-        "jest-canvas-mock": "^2.2.0",
         "@types/styled-components": "^5.1.7",
         "browser-sync": "^2.26.14",
         "eslint": "^7.19.0",
@@ -131,7 +108,6 @@
         "playwright": "^1.8.1",
         "playwright-core": "^1.8.1",
         "playwright-testing-library": "^2.7.0",
-        "prettier": "^2.0.4",
         "prettier": "^2.2.1",
         "redux-mock-store": "^1.5.4",
         "typescript": "^4.1.3"
