--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@types/webpack-env": "^1.16.0",
         "ag-grid-community": "^24.1.0",
         "ag-grid-react": "^24.1.1",
+        "history": "^5.2.0",
         "jszip": "^3.5.0",
         "lodash": "^4.17.20",
         "lz-string": "^1.4.4",
