--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "dicty-express",
-    "version": "1.0.0-alpha.1",
+    "version": "0.1.0b1",
     "private": true,
     "dependencies": {
         "@genialis/resolwe": "^15.0.0",
