--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "@types/react-grid-layout": "^1.1.1",
         "@types/uuid": "^8.3.0",
         "@types/webpack-env": "^1.16.0",
-        "ag-grid-community": "^24.1.0",
+        "ag-grid-community": "^27.1.0",
         "ag-grid-react": "^24.1.1",
         "history": "^5.2.0",
         "jszip": "^3.5.0",
@@ -26,12 +26,13 @@
         "react-grid-layout": "^1.2.0",
         "react-redux": "^7.2.2",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "^4.0.2",
+        "react-scripts": "^4.0.3",
         "react-sizeme": "^2.6.12",
         "react-slick": "^0.28.0",
         "redux": "^4.0.5",
         "redux-observable": "^1.2.0",
         "rxjs": "^6.6.2",
+        "sass": "^1.49.9",
         "slick-carousel": "^1.8.1",
         "styled-components": "^5.2.1",
         "uuid": "^8.3.2",
@@ -86,16 +87,16 @@
         "@types/react-router-dom": "^5.1.7",
         "@types/react-slick": "^0.23.4",
         "@types/redux-mock-store": "^1.0.2",
-        "cross-env": "^7.0.3",
-        "express": "^4.17.1",
-        "http-proxy-middleware": "^1.0.6",
         "@types/styled-components": "^5.1.7",
         "browser-sync": "^2.26.14",
+        "cross-env": "^7.0.3",
         "eslint": "^7.19.0",
         "eslint-config-airbnb-typescript": "^12.3.1",
         "eslint-config-prettier": "^7.2.0",
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-prettier": "^3.3.1",
+        "express": "^4.17.1",
+        "http-proxy-middleware": "^1.0.6",
         "jest-canvas-mock": "^2.3.1",
         "jest-environment-jsdom-sixteen": "^1.0.3",
         "jest-fetch-mock": "^3.0.3",
@@ -103,13 +104,17 @@
         "jest-playwright-preset": "^1.4.5",
         "jsdom": "^16.4.0",
         "mock-socket": "^9.0.3",
-        "node-sass": "^4.14.1",
         "npm-run-all": "^4.1.5",
         "playwright": "^1.8.1",
         "playwright-core": "^1.8.1",
         "playwright-testing-library": "^2.7.0",
         "prettier": "^2.2.1",
+        "react-error-overlay": "^6.0.9",
         "redux-mock-store": "^1.5.4",
         "typescript": "^4.1.3"
+    },
+    "packageManager": "yarn@3.2.0",
+    "resolutions": {
+        "react-error-overlay": "6.0.9"
     }
 }
