--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,7 @@
     "compilerOptions": {
         "baseUrl": "src",
         "target": "es5",
-        "lib": [
-            "dom",
-            "dom.iterable",
-            "esnext"
-        ],
+        "lib": ["dom", "dom.iterable", "esnext"],
         "allowJs": true,
         "skipLibCheck": true,
         "esModuleInterop": true,
@@ -19,10 +15,8 @@
         "isolatedModules": true,
         "noEmit": true,
         "jsx": "react-jsx",
-        "noFallthroughCasesInSwitch": true
+        "noFallthroughCasesInSwitch": true,
+        "useUnknownInCatchVariables": false
     },
-    "include": [
-        "src",
-        "e2e"
-, "public/config.js"    ]
+    "include": ["src", "e2e", "public/config.js"]
 }
