--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0b1",
     "private": true,
     "dependencies": {
-        "@genialis/resolwe": "^15.0.0",
+        "@genialis/resolwe": "^17.0.0",
         "@material-ui/core": "^4.11.0",
         "@material-ui/icons": "^4.11.2",
         "@material-ui/lab": "^4.0.0-alpha.57",
@@ -88,13 +88,18 @@
         "@types/react-slick": "^0.23.4",
         "@types/redux-mock-store": "^1.0.2",
         "@types/styled-components": "^5.1.7",
+        "@typescript-eslint/eslint-plugin": "^5.15.0",
+        "@typescript-eslint/parser": "^5.15.0",
         "browser-sync": "^2.26.14",
         "cross-env": "^7.0.3",
-        "eslint": "^7.19.0",
-        "eslint-config-airbnb-typescript": "^12.3.1",
-        "eslint-config-prettier": "^7.2.0",
+        "eslint": "^8.11.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-airbnb-typescript": "^16.1.4",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-config-react-app": "^7.0.0",
         "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-prettier": "^3.3.1",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react-hooks": "^4.3.0",
         "express": "^4.17.1",
         "http-proxy-middleware": "^1.0.6",
         "jest-canvas-mock": "^2.3.1",
