--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "@types/uuid": "^8.3.0",
         "@types/webpack-env": "^1.16.0",
         "ag-grid-community": "^27.1.0",
-        "ag-grid-react": "^24.1.1",
+        "ag-grid-react": "^27.1.0",
         "history": "^5.2.0",
         "jszip": "^3.5.0",
         "lodash": "^4.17.20",
@@ -26,7 +26,7 @@
         "react-grid-layout": "^1.2.0",
         "react-redux": "^7.2.2",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "^4.0.3",
+        "react-scripts": "^5.0.0",
         "react-sizeme": "^2.6.12",
         "react-slick": "^0.28.0",
         "redux": "^4.0.5",
@@ -47,7 +47,7 @@
         "start": "react-scripts start",
         "serve": "node ./src/serveLocalBuild.js",
         "build": "react-scripts build",
-        "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
+        "test": "react-scripts test",
         "prettier": "prettier",
         "e2e:run": "cd e2e && jest",
         "e2e:debug": "cd e2e && cross-env DEBUG=pw:api PWDEBUG=1 jest",
@@ -72,13 +72,13 @@
         ]
     },
     "devDependencies": {
-        "@jest/globals": "^26.6.2",
-        "@jest/types": "^26.6.2",
+        "@jest/globals": "^27.5.1",
+        "@jest/types": "^27.5.1",
         "@sentry/webpack-plugin": "^1.14.0",
         "@testing-library/jest-dom": "^5.11.9",
-        "@testing-library/react": "^11.2.5",
-        "@testing-library/user-event": "^12.6.3",
-        "@types/jest": "^26.0.20",
+        "@testing-library/react": "^12.1.4",
+        "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^27.4.1",
         "@types/jsdom": "^16.2.6",
         "@types/lodash": "^4.14.168",
         "@types/react": "^17.0.1",
@@ -101,18 +101,18 @@
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react-hooks": "^4.3.0",
         "express": "^4.17.1",
-        "http-proxy-middleware": "^1.0.6",
+        "http-proxy-middleware": "^2.0.4",
         "jest-canvas-mock": "^2.3.1",
-        "jest-environment-jsdom-sixteen": "^1.0.3",
+        "jest-environment-jsdom-sixteen": "^2.0.0",
         "jest-fetch-mock": "^3.0.3",
         "jest-image-snapshot": "^4.3.0",
         "jest-playwright-preset": "^1.4.5",
-        "jsdom": "^16.4.0",
+        "jsdom": "^19.0.0",
         "mock-socket": "^9.0.3",
         "npm-run-all": "^4.1.5",
         "playwright": "^1.8.1",
         "playwright-core": "^1.8.1",
-        "playwright-testing-library": "^2.7.0",
+        "playwright-testing-library": "^4.2.0",
         "prettier": "^2.2.1",
         "react-error-overlay": "^6.0.9",
         "redux-mock-store": "^1.5.4",
