Upgrade playwright to latest version

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "prettier": "prettier",
+        "e2e": "env-cmd -f .playwright.env playwright test -c playwright.config.ts \"e2e/(\\w/*)*/.*.spec.ts\"",
         "e2e:run": "cd e2e && jest",
         "e2e:debug": "cd e2e && cross-env DEBUG=pw:api PWDEBUG=1 jest",
         "eject": "react-scripts eject",
@@ -74,6 +75,8 @@
     "devDependencies": {
         "@jest/globals": "^27.5.1",
         "@jest/types": "^27.5.1",
+        "@playwright-testing-library/test": "^4.2.0",
+        "@playwright/test": "^1.20.0",
         "@sentry/webpack-plugin": "^1.14.0",
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^12.1.4",
@@ -92,6 +95,7 @@
         "@typescript-eslint/parser": "^5.15.0",
         "browser-sync": "^2.26.14",
         "cross-env": "^7.0.3",
+        "env-cmd": "^10.1.0",
         "eslint": "^8.11.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-airbnb-typescript": "^16.1.4",
@@ -110,9 +114,6 @@
         "jsdom": "^19.0.0",
         "mock-socket": "^9.0.3",
         "npm-run-all": "^4.1.5",
-        "playwright": "^1.8.1",
-        "playwright-core": "^1.8.1",
-        "playwright-testing-library": "^4.2.0",
         "prettier": "^2.2.1",
         "react-error-overlay": "^6.0.9",
         "redux-mock-store": "^1.5.4",
