--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
         "noFallthroughCasesInSwitch": true,
         "useUnknownInCatchVariables": false
     },
-    "include": ["src", "e2e", "public/config.js"]
+    "include": ["src", "e2e", "public/config.js", "playwright.config.ts"]
 }
