--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
     "version": "0.1.0b1",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.8.2",
+        "@emotion/styled": "^11.8.1",
         "@genialis/resolwe": "^17.0.0",
-        "@material-ui/core": "^4.11.0",
-        "@material-ui/icons": "^4.11.2",
-        "@material-ui/lab": "^4.0.0-alpha.57",
+        "@mui/icons-material": "^5.5.1",
+        "@mui/material": "^5.5.2",
+        "@mui/styled-engine-sc": "^5.5.2",
         "@reduxjs/toolkit": "^1.5.0",
         "@sentry/browser": "^6.0.4",
         "@types/lz-string": "^1.3.34",
@@ -19,8 +21,7 @@
         "jszip": "^3.5.0",
         "lodash": "^4.17.20",
         "lz-string": "^1.4.4",
-        "mdi-material-ui": "^6.22.0",
-        "notistack": "^1.0.3",
+        "notistack": "^2.0.3",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-grid-layout": "^1.2.0",
@@ -84,7 +85,7 @@
         "@types/jest": "^27.4.1",
         "@types/jsdom": "^16.2.6",
         "@types/lodash": "^4.14.168",
-        "@types/react": "^17.0.1",
+        "@types/react": "^17.0.41",
         "@types/react-dom": "^17.0.0",
         "@types/react-redux": "^7.1.16",
         "@types/react-router-dom": "^5.1.7",
@@ -117,7 +118,7 @@
         "prettier": "^2.2.1",
         "react-error-overlay": "^6.0.9",
         "redux-mock-store": "^1.5.4",
-        "typescript": "^4.1.3"
+        "typescript": "^4.6.2"
     },
     "packageManager": "yarn@3.2.0",
     "resolutions": {
