--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "@mui/material": "^5.5.2",
         "@mui/styled-engine-sc": "^5.5.2",
         "@reduxjs/toolkit": "^1.5.0",
-        "@sentry/browser": "^6.0.4",
+        "@sentry/browser": "^6.19.1",
         "@types/lz-string": "^1.3.34",
         "@types/react-grid-layout": "^1.1.1",
         "@types/uuid": "^8.3.0",
@@ -26,9 +26,9 @@
         "react-dom": "^17.0.1",
         "react-grid-layout": "^1.2.0",
         "react-redux": "^7.2.2",
-        "react-router-dom": "^5.2.0",
+        "react-router-dom": "^6.2.2",
         "react-scripts": "^5.0.0",
-        "react-sizeme": "^2.6.12",
+        "react-sizeme": "^3.0.2",
         "react-slick": "^0.28.0",
         "redux": "^4.0.5",
         "redux-observable": "^2.0.0",
@@ -38,7 +38,7 @@
         "styled-components": "^5.2.1",
         "uuid": "^8.3.2",
         "vega": "^5.19.1",
-        "vega-tooltip": "^0.25.0",
+        "vega-tooltip": "^0.28.0",
         "webpack-cli": "^4.5.0"
     },
     "jest": {
@@ -92,8 +92,8 @@
         "@types/react-slick": "^0.23.4",
         "@types/redux-mock-store": "^1.0.2",
         "@types/styled-components": "^5.1.7",
-        "@typescript-eslint/eslint-plugin": "^5.15.0",
-        "@typescript-eslint/parser": "^5.15.0",
+        "@typescript-eslint/eslint-plugin": "^5.16.0",
+        "@typescript-eslint/parser": "^5.16.0",
         "browser-sync": "^2.26.14",
         "cross-env": "^7.0.3",
         "env-cmd": "^10.1.0",
@@ -116,12 +116,8 @@
         "mock-socket": "^9.0.3",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.2.1",
-        "react-error-overlay": "^6.0.9",
         "redux-mock-store": "^1.5.4",
         "typescript": "^4.6.2"
     },
-    "packageManager": "yarn@3.2.0",
-    "resolutions": {
-        "react-error-overlay": "6.0.9"
-    }
+    "packageManager": "yarn@3.2.0"
 }
