--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "lz-string": "^1.4.4",
         "notistack": "^2.0.3",
         "react": "^17.0.1",
+        "react-cookie-consent": "^8.0.1",
         "react-dom": "^17.0.1",
         "react-grid-layout": "^1.2.0",
         "react-redux": "^7.2.2",
