--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dependencies": {
         "@emotion/react": "^11.8.2",
         "@emotion/styled": "^11.8.1",
-        "@genialis/resolwe": "beta",
+        "@genialis/resolwe": "^17.1.0",
         "@mui/icons-material": "^5.5.1",
         "@mui/material": "^5.5.2",
         "@mui/styled-engine-sc": "^5.5.2",
