--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
     "version": "1.0.0b1",
     "private": true,
     "dependencies": {
-        "@emotion/react": "^11.10.5",
-        "@emotion/styled": "^11.10.5",
         "@genialis/resolwe": "17.2.0",
-        "@mui/icons-material": "^5.10.14",
-        "@mui/material": "^5.10.14",
-        "@mui/styled-engine-sc": "^5.10.14",
+        "@mui/icons-material": "^5.14.0",
+        "@mui/material": "^5.14.0",
+        "@mui/styled-engine-sc": "^5.12.0",
         "@reduxjs/toolkit": "^1.9.0",
         "@sentry/browser": "^7.19.0",
         "@types/lz-string": "^1.3.34",
@@ -115,6 +113,9 @@
         "prettier": "^2.7.1",
         "redux-mock-store": "^1.5.4",
         "typescript": "^4.9.3"
+    },
+    "resolutions": {
+        "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
     },
     "packageManager": "yarn@3.2.4",
     "engines": {
