--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
         "@types/react-grid-layout": "^1.3.2",
         "@types/uuid": "^9.0.2",
         "@types/webpack-env": "^1.18.1",
-        "ag-grid-community": "^28.2.1",
-        "ag-grid-react": "^28.2.1",
+        "ag-grid-community": "29.3.5",
+        "ag-grid-react": "29.3.5",
         "history": "^5.3.0",
         "jszip": "^3.10.1",
         "lodash": "^4.17.21",
