--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-REACT_APP_VERSION=${npm_package_version}
-REACT_APP_NAME=dictyExpress
-REACT_APP_SENTRY_URL=https://e0a554a693f641a6923a4240a2a64dfb@o74924.ingest.sentry.io/5265645
+VITE_APP_VERSION=${npm_package_version}
+VITE_APP_NAME=dictyExpress
+VITE_APP_SENTRY_URL=https://e0a554a693f641a6923a4240a2a64dfb@o74924.ingest.sentry.io/5265645
 INLINE_RUNTIME_CHUNK=false
 BROWSER=none
