--- a/package.json
+++ b/package.json
@@ -1,228 +1,196 @@
 {
-  "name": "dicty-express",
-  "version": "1.0.0b6",
-  "private": true,
-  "dependencies": {
-    "@babel/core": "^7.16.0",
-    "@genialis/resolwe": "17.2.0",
-    "@mui/icons-material": "^5.16.7",
-    "@mui/material": "^5.16.7",
-    "@mui/styled-engine-sc": "^5.14.12",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
-    "@react-hook/resize-observer": "^1.2.6",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@sentry/browser": "^7.59.2",
-    "@svgr/webpack": "^5.5.0",
-    "@types/lz-string": "^1.5.0",
-    "@types/react-grid-layout": "^1.3.2",
-    "@types/uuid": "^9.0.2",
-    "@types/webpack-env": "^1.18.1",
-    "ag-grid-community": "29.3.5",
-    "ag-grid-react": "29.3.5",
-    "babel-jest": "^27.4.2",
-    "babel-loader": "^8.2.3",
-    "babel-plugin-named-asset-import": "^0.3.8",
-    "babel-preset-react-app": "^10.0.1",
-    "bfj": "^7.0.2",
-    "browserslist": "^4.18.1",
-    "camelcase": "^6.2.1",
-    "case-sensitive-paths-webpack-plugin": "^2.4.0",
-    "css-loader": "^6.5.1",
-    "css-minimizer-webpack-plugin": "^3.2.0",
-    "dotenv": "^10.0.0",
-    "dotenv-expand": "^5.1.0",
-    "eslint": "^8.3.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-webpack-plugin": "^3.1.1",
-    "file-loader": "^6.2.0",
-    "fs-extra": "^10.0.0",
-    "history": "^5.3.0",
-    "html-webpack-plugin": "^5.5.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.4.3",
-    "jest-resolve": "^27.4.2",
-    "jest-watch-typeahead": "^1.0.0",
-    "jszip": "^3.10.1",
-    "lodash": "^4.17.21",
-    "lz-string": "^1.5.0",
-    "mini-css-extract-plugin": "^2.4.5",
-    "ml-distance-matrix": "^2.0.1",
-    "ml-matrix": "^6.11.1",
-    "notistack": "^2.0.8",
-    "postcss": "^8.4.4",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-loader": "^6.2.1",
-    "postcss-normalize": "^10.0.1",
-    "postcss-preset-env": "^7.0.1",
-    "prompts": "^2.4.2",
-    "react": "^18.2.0",
-    "react-app-polyfill": "^3.0.0",
-    "react-cookie-consent": "^8.0.1",
-    "react-dev-utils": "^12.0.1",
-    "react-dom": "^18.2.0",
-    "react-grid-layout": "^1.3.4",
-    "react-redux": "^8.1.1",
-    "react-refresh": "^0.11.0",
-    "react-router-dom": "^6.14.2",
-    "react-slick": "^0.29.0",
-    "redux": "^4.2.1",
-    "redux-observable": "^2.0.0",
-    "resolve": "^1.20.0",
-    "resolve-url-loader": "^4.0.0",
-    "rxjs": "^7.8.1",
-    "sass": "^1.63.6",
-    "sass-loader": "^12.3.0",
-    "semver": "^7.3.5",
-    "slick-carousel": "^1.8.1",
-    "source-map-loader": "^3.0.0",
-    "style-loader": "^3.3.1",
-    "styled-components": "^6.1.12",
-    "tailwindcss": "^3.0.2",
-    "terser-webpack-plugin": "^5.2.5",
-    "uuid": "^9.0.0",
-    "vega": "^5.22.1",
-    "vega-tooltip": "^0.28.0",
-    "webpack": "^5.64.4",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.6.0",
-    "webpack-manifest-plugin": "^4.0.2",
-    "workbox-webpack-plugin": "^6.4.1"
-  },
-  "jest": {
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "setupFiles": [
-      "react-app-polyfill/jsdom"
-    ],
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/setupTests.ts"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
-    ],
-    "testEnvironment": "jsdom",
-    "transform": {
-      "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.js",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+    "name": "dicty-express",
+    "version": "1.0.0b6",
+    "private": true,
+    "dependencies": {
+        "@babel/core": "^7.16.0",
+        "@genialis/resolwe": "17.2.0",
+        "@mui/icons-material": "^5.16.7",
+        "@mui/material": "^5.16.7",
+        "@mui/styled-engine-sc": "^5.14.12",
+        "@react-hook/resize-observer": "^1.2.6",
+        "@reduxjs/toolkit": "^1.9.5",
+        "@sentry/browser": "^7.59.2",
+        "@types/lz-string": "^1.5.0",
+        "@types/react-grid-layout": "^1.3.2",
+        "@types/uuid": "^9.0.2",
+        "ag-grid-community": "29.3.5",
+        "ag-grid-react": "29.3.5",
+        "babel-jest": "^27.4.2",
+        "babel-preset-react-app": "^10.0.1",
+        "camelcase": "^6.2.1",
+        "history": "^5.3.0",
+        "jest": "^27.4.3",
+        "jest-resolve": "^27.4.2",
+        "jest-watch-typeahead": "^1.0.0",
+        "jszip": "^3.10.1",
+        "lodash": "^4.17.21",
+        "lz-string": "^1.5.0",
+        "ml-distance-matrix": "^2.0.1",
+        "ml-matrix": "^6.11.1",
+        "notistack": "^2.0.8",
+        "prompts": "^2.4.2",
+        "react": "^18.2.0",
+        "react-cookie-consent": "^8.0.1",
+        "react-dom": "^18.2.0",
+        "react-grid-layout": "^1.3.4",
+        "react-redux": "^8.1.1",
+        "react-router-dom": "^6.14.2",
+        "react-slick": "^0.29.0",
+        "redux": "^4.2.1",
+        "redux-observable": "^2.0.0",
+        "rxjs": "^7.8.1",
+        "slick-carousel": "^1.8.1",
+        "styled-components": "^6.1.12",
+        "uuid": "^9.0.0",
+        "vega": "^5.22.1",
+        "vega-tooltip": "^0.28.0"
     },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|cjs|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "modulePaths": [
-      "C:\\Genialis\\git\\dictyexpress-js\\src"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
+    "jest": {
+        "roots": [
+            "<rootDir>/src"
+        ],
+        "collectCoverageFrom": [
+            "src/**/*.{js,jsx,ts,tsx}",
+            "!src/**/*.d.ts"
+        ],
+        "setupFiles": [
+            "react-app-polyfill/jsdom"
+        ],
+        "setupFilesAfterEnv": [
+            "<rootDir>/src/setupTests.ts"
+        ],
+        "testMatch": [
+            "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
+            "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
+        ],
+        "testEnvironment": "jsdom",
+        "transform": {
+            "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.js",
+            "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
+            "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+        },
+        "transformIgnorePatterns": [
+            "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|cjs|ts|tsx)$",
+            "^.+\\.module\\.(css|sass|scss)$"
+        ],
+        "modulePaths": [
+            "C:\\Genialis\\git\\dictyexpress-js\\src"
+        ],
+        "moduleNameMapper": {
+            "^react-native$": "react-native-web",
+            "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
+        },
+        "moduleFileExtensions": [
+            "web.js",
+            "js",
+            "web.ts",
+            "ts",
+            "web.tsx",
+            "tsx",
+            "json",
+            "web.jsx",
+            "jsx",
+            "node"
+        ],
+        "watchPlugins": [
+            "jest-watch-typeahead/filename",
+            "jest-watch-typeahead/testname"
+        ],
+        "resetMocks": false
     },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "web.ts",
-      "ts",
-      "web.tsx",
-      "tsx",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ],
-    "watchPlugins": [
-      "jest-watch-typeahead/filename",
-      "jest-watch-typeahead/testname"
-    ],
-    "resetMocks": false
-  },
-  "scripts": {
-    "start": "node scripts/start.js",
-    "serve": "node ./src/serveLocalBuild.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js",
-    "e2e": "env-cmd -f .playwright.env playwright test -c playwright.config.ts \"e2e/(\\w/*)*/.*.spec.ts\"",
-    "lint": "eslint --max-warnings 0 .",
-    "lint:fix": "npm run lint -- --fix",
-    "check": "tsc && npm run lint"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@eslint/compat": "^1.1.1",
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "9.9.0",
-    "@jest/globals": "^29.6.1",
-    "@jest/types": "^29.6.1",
-    "@playwright-testing-library/test": "^4.5.0",
-    "@playwright/test": "^1.36.1",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.3",
-    "@types/jsdom": "^21.1.1",
-    "@types/lodash": "^4.14.195",
-    "@types/node": "^20.4.2",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@types/react-redux": "^7.1.25",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/react-slick": "^0.23.10",
-    "@types/redux-mock-store": "^1.0.3",
-    "browser-sync": "^2.29.3",
-    "cross-env": "^7.0.3",
-    "env-cmd": "^10.1.0",
-    "eslint": "9.9.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "7.35.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "express": "^4.18.2",
-    "globals": "^15.9.0",
-    "http-proxy-middleware": "^2.0.6",
-    "jest-canvas-mock": "^2.5.2",
-    "jest-environment-jsdom-sixteen": "^2.0.0",
-    "jest-fetch-mock": "^3.0.3",
-    "jest-image-snapshot": "^6.1.0",
-    "jest-playwright-preset": "^2.0.0",
-    "jsdom": "^20.0.3",
-    "mock-socket": "^9.2.1",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^3.3.3",
-    "redux-mock-store": "^1.5.4",
-    "typescript": "^4.9.3",
-    "typescript-eslint": "8.0.1"
-  },
-  "resolutions": {
-    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
-    "rxjs": "^7.8.1"
-  },
-  "packageManager": "yarn@3.2.4",
-  "engines": {
-    "node": ">=18"
-  },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
-  }
+    "scripts": {
+        "start": "vite",
+        "serve": "vite preview",
+        "build": "vite build",
+        "test": "node scripts/test.js",
+        "e2e": "env-cmd -f .playwright.env playwright test -c playwright.config.ts \"e2e/(\\w/*)*/.*.spec.ts\"",
+        "lint": "eslint --max-warnings 0 .",
+        "lint:fix": "npm run lint -- --fix",
+        "check": "tsc && npm run lint"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@eslint/compat": "^1.1.1",
+        "@eslint/eslintrc": "^3.1.0",
+        "@eslint/js": "9.9.0",
+        "@jest/globals": "^29.6.1",
+        "@jest/types": "^29.6.1",
+        "@playwright-testing-library/test": "^4.5.0",
+        "@playwright/test": "^1.36.1",
+        "@testing-library/jest-dom": "^5.17.0",
+        "@testing-library/react": "^14.0.0",
+        "@types/jest": "^29.5.3",
+        "@types/jsdom": "^21.1.1",
+        "@types/lodash": "^4.14.195",
+        "@types/node": "^20.4.2",
+        "@types/react": "^18.2.15",
+        "@types/react-dom": "^18.2.7",
+        "@types/react-redux": "^7.1.25",
+        "@types/react-router-dom": "^5.3.3",
+        "@types/react-slick": "^0.23.10",
+        "@types/redux-mock-store": "^1.0.3",
+        "@vitejs/plugin-react-swc": "^3.7.0",
+        "babel-preset-vite": "^1.1.3",
+        "browser-sync": "^2.29.3",
+        "cross-env": "^7.0.3",
+        "dotenv": "^16.4.5",
+        "dotenv-expand": "^5.1.0",
+        "env-cmd": "^10.1.0",
+        "eslint": "^9.9.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-jsx-a11y": "^6.9.0",
+        "eslint-plugin-prettier": "^5.2.1",
+        "eslint-plugin-react": "7.35.0",
+        "eslint-plugin-react-hooks": "^4.6.2",
+        "globals": "^15.9.0",
+        "http-proxy-middleware": "^2.0.6",
+        "import-meta-resolve": "^4.1.0",
+        "jest-canvas-mock": "^2.5.2",
+        "jest-environment-jsdom-sixteen": "^2.0.0",
+        "jest-fetch-mock": "^3.0.3",
+        "jest-image-snapshot": "^6.1.0",
+        "jest-playwright-preset": "^2.0.0",
+        "jsdom": "^20.0.3",
+        "mock-socket": "^9.2.1",
+        "npm-run-all": "^4.1.5",
+        "prettier": "^3.3.3",
+        "react-app-polyfill": "^3.0.0",
+        "react-dev-utils": "^12.0.1",
+        "redux-mock-store": "^1.5.4",
+        "sass": "^1.77.8",
+        "typescript": "^4.9.3",
+        "typescript-eslint": "8.0.1",
+        "vite": "^5.4.0",
+        "vite-plugin-svgr": "^4.2.0",
+        "vite-tsconfig-paths": "^5.0.1"
+    },
+    "resolutions": {
+        "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
+        "rxjs": "^7.8.1"
+    },
+    "packageManager": "yarn@3.2.4",
+    "engines": {
+        "node": ">=18"
+    },
+    "babel": {
+        "presets": [
+            "react-app"
+        ]
+    }
 }
