--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,12 @@
         "noFallthroughCasesInSwitch": true,
         "useUnknownInCatchVariables": false
     },
-    "include": ["src", "e2e", "public/config.js", "playwright.config.ts", "eslint.config.mjs"]
+    "include": [
+        "src",
+        "e2e",
+        "public/config.js",
+        "playwright.config.ts",
+        "eslint.config.mjs",
+        "vite.config.mts"
+    ]
 }
