--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,21 +13,22 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-20.04
+    runs-on: arc-runner
     strategy:
       matrix:
-        node-version: [18.x]
+        node-version: [20]
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
+      - uses: actions/checkout@v4
+      - name: Select Node v${{ matrix.node-version }}
+        shell: bash -l {0}
+        run: |
+          nvm use ${{ matrix.node-version }}
+          echo "PATH=$(echo $PATH)" >> "$GITHUB_ENV"
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "dir=$(yarn config get cacheFolder)" >> $GITHUB_OUTPUT
       - name: Restore yarn cache
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         id: yarn-cache
         with:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
