Use Vitest instead of Jest

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
         "public/config.js",
         "playwright.config.ts",
         "eslint.config.mjs",
-        "vite.config.mts"
+        "vite.config.mts",
+        "vitest.config.mts"
     ]
 }
