--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
     "version": "1.0.0b6",
     "private": true,
     "dependencies": {
-        "@babel/core": "^7.25.2",
         "@genialis/resolwe": "17.2.0",
         "@mui/icons-material": "^5.16.7",
         "@mui/material": "^5.16.7",
@@ -16,13 +15,9 @@
         "@types/uuid": "^10.0.0",
         "ag-grid-community": "29.3.5",
         "ag-grid-react": "29.3.5",
-        "babel-jest": "^27.4.2",
         "babel-preset-react-app": "^10.0.1",
         "camelcase": "^6.2.1",
         "history": "^5.3.0",
-        "jest": "^27.4.3",
-        "jest-resolve": "^27.4.2",
-        "jest-watch-typeahead": "^1.0.0",
         "jszip": "^3.10.1",
         "lodash": "^4.17.21",
         "lz-string": "^1.5.0",
@@ -46,68 +41,11 @@
         "vega": "^5.22.1",
         "vega-tooltip": "^0.28.0"
     },
-    "jest": {
-        "roots": [
-            "<rootDir>/src"
-        ],
-        "collectCoverageFrom": [
-            "src/**/*.{js,jsx,ts,tsx}",
-            "!src/**/*.d.ts"
-        ],
-        "setupFiles": [
-            "react-app-polyfill/jsdom"
-        ],
-        "setupFilesAfterEnv": [
-            "<rootDir>/src/setupTests.ts"
-        ],
-        "testMatch": [
-            "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-            "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
-        ],
-        "testEnvironment": "jsdom",
-        "transform": {
-            "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.js",
-            "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-            "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-        },
-        "transformIgnorePatterns": [
-            "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|cjs|ts|tsx)$",
-            "^.+\\.module\\.(css|sass|scss)$"
-        ],
-        "modulePaths": [
-            "C:\\Genialis\\git\\dictyexpress-js\\src"
-        ],
-        "moduleDirectories": [
-            "node_modules",
-            "src"
-        ],
-        "moduleNameMapper": {
-            "^react-native$": "react-native-web",
-            "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
-        },
-        "moduleFileExtensions": [
-            "web.js",
-            "js",
-            "web.ts",
-            "ts",
-            "web.tsx",
-            "tsx",
-            "json",
-            "web.jsx",
-            "jsx",
-            "node"
-        ],
-        "watchPlugins": [
-            "jest-watch-typeahead/filename",
-            "jest-watch-typeahead/testname"
-        ],
-        "resetMocks": false
-    },
     "scripts": {
         "start": "vite",
         "serve": "vite preview",
         "build": "vite build",
-        "test": "node scripts/test.js",
+        "test": "vitest",
         "e2e": "env-cmd -f .playwright.env playwright test -c playwright.config.ts \"e2e/(\\w/*)*/.*.spec.ts\"",
         "lint": "eslint --max-warnings 0 .",
         "lint:fix": "npm run lint -- --fix",
@@ -129,26 +67,27 @@
         ]
     },
     "devDependencies": {
+        "@babel/core": "^7.25.2",
         "@eslint/compat": "^1.1.1",
         "@eslint/eslintrc": "^3.1.0",
         "@eslint/js": "9.9.0",
-        "@jest/globals": "^29.6.1",
-        "@jest/types": "^29.6.1",
         "@playwright-testing-library/test": "^4.5.0",
-        "@playwright/test": "^1.36.1",
-        "@testing-library/jest-dom": "^5.17.0",
-        "@testing-library/react": "^14.0.0",
-        "@types/jest": "^29.5.3",
-        "@types/jsdom": "^21.1.1",
+        "@playwright/test": "^1.46.0",
+        "@testing-library/jest-dom": "^6.4.8",
+        "@testing-library/react": "^16.0.0",
+        "@testing-library/user-event": "^14.5.2",
+        "@types/jest": "^29.5.12",
+        "@types/jsdom": "^21.1.7",
         "@types/lodash": "^4.17.7",
         "@types/node": "^22.2.0",
-        "@types/react": "^18.2.15",
+        "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@types/react-redux": "^7.1.33",
         "@types/react-router-dom": "^5.3.3",
         "@types/react-slick": "^0.23.13",
         "@types/redux-mock-store": "^1.0.6",
         "@vitejs/plugin-react-swc": "^3.7.0",
+        "@vitest/ui": "^2.0.5",
         "babel-preset-vite": "^1.1.3",
         "browser-sync": "^2.29.3",
         "cross-env": "^7.0.3",
@@ -163,15 +102,9 @@
         "eslint-plugin-react": "7.35.0",
         "eslint-plugin-react-hooks": "^4.6.2",
         "globals": "^15.9.0",
-        "http-proxy-middleware": "^2.0.6",
         "import-meta-resolve": "^4.1.0",
-        "jest-canvas-mock": "^2.5.2",
-        "jest-environment-jsdom-sixteen": "^2.0.0",
-        "jest-fetch-mock": "^3.0.3",
-        "jest-image-snapshot": "^6.1.0",
-        "jest-playwright-preset": "^2.0.0",
-        "jsdom": "^20.0.3",
-        "mock-socket": "^9.2.1",
+        "jsdom": "^24.1.1",
+        "mock-socket": "^9.3.1",
         "npm-run-all": "^4.1.5",
         "prettier": "^3.3.3",
         "react-app-polyfill": "^3.0.0",
@@ -182,7 +115,10 @@
         "typescript-eslint": "8.1.0",
         "vite": "^5.4.0",
         "vite-plugin-svgr": "^4.2.0",
-        "vite-tsconfig-paths": "^5.0.1"
+        "vite-tsconfig-paths": "^5.0.1",
+        "vitest": "^2.0.5",
+        "vitest-canvas-mock": "^0.3.3",
+        "vitest-fetch-mock": "^0.3.0"
     },
     "resolutions": {
         "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
